fix: fix squash width

--- a/src/app/components/Overview/Squash/Squash.scss
+++ b/src/app/components/Overview/Squash/Squash.scss
@@ -67,6 +67,6 @@
     object-fit: contain;
     object-position: bottom;
     height: 100%;
-    width: 100%;
+    width: fit-content;
   }
 }
